--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
 						<li><a href="#">Blog</a></li>
+						<li class="menu-has-children"><a href="#">Blog</a>
+							<ul>
+								<li><a href="#">Blog List</a></li>
+								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 			</div>
