--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,12 @@
 						<li><a href="about.html">About</a></li>
 						<li><a class="active" href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="#">Blog</a></li>
+						<li class="menu-has-children"><a class="active" href="#">Blog</a>
+							<ul>
+								<li><a href="#">Blog List</a></li>
+								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
+							</ul>
+						</li>
 						
 					</ul>
 				</nav>
