--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 						<li class="menu-has-children"><a href="#">Blog</a>
 							<ul class="dark">
 								<li><a href="#">Blog List</a></li>
-								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
+								<li><a href="https://medium.com/@melchhepta">Medium</a></li>
 							</ul>
 						</li>
 						
