--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Boakye I. Ababio</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Ai, ML, DL ||
+						<span class="designer">Intern @ Microsoft (Wicresoft) Shanghai </span>
 						<span class="designer">Backend, Frontend Mobile & Web</span>
 						 
 						<span class="developer">Developer</span>
