--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Boakye I. Ababio</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
-						Ai, ML, DL ||
-						<span class="designer">Intern @ Microsoft (Wicresoft) Shanghai </span>
+						Ai, ML, DL || \n
+						Intern @ Microsoft (Wicresoft) Shanghai 
 						<span class="designer">Backend, Frontend Mobile & Web</span>
 						 
 						<span class="developer">Developer</span>
